--- a/pages/18905.html
+++ b/pages/18905.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9250/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9250/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -785,7 +785,7 @@ margin-left: 0em;
 
 <h3 id="ThermalQuantumFieldTheoryViaPeriodicEuclideanTime">Thermal quantum field theory via periodic Euclidean time</h3>
 
-<p>The equal-time <a class="existingWikiWord" href="/nlab/show/n-point+functions">n-point functions</a> in <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic field theory</a> on <a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^{d,1}</annotation></semantics></math> in a <a class="existingWikiWord" href="/nlab/show/vacuum+state">vacuum state</a> reflecting equilibrium at <a class="existingWikiWord" href="/nlab/show/finite+number">finite</a> <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi></mrow><annotation encoding="application/x-tex">T</annotation></semantics></math> may be argued (<a href="#Bloch58">Bloch 58</a>) to be computed equivalently by Euclidean field theory on the <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^d \times S^1</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/Euclidean+space">Euclidean space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>d</mi></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^d</annotation></semantics></math> with a <a class="existingWikiWord" href="/nlab/show/circle">circle</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding="application/x-tex">S^1</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/length">circumference</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta \coloneqq 1/T</annotation></semantics></math> (e.g. <a href="#Moore03">Moore 03, section 1.1</a>):</p>
+<p>The equal-time <a class="existingWikiWord" href="/nlab/show/n-point+functions">n-point functions</a> in <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic field theory</a> on <a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^{d,1}</annotation></semantics></math> in a <a class="existingWikiWord" href="/nlab/show/vacuum+state">vacuum state</a> reflecting equilibrium at <a class="existingWikiWord" href="/nlab/show/finite+number">finite</a> <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi></mrow><annotation encoding="application/x-tex">T</annotation></semantics></math> may be argued (<a href="#Bloch58">Bloch 58</a>) to be computed equivalently by Euclidean field theory on the <a class="existingWikiWord" href="/nlab/show/Cartesian+product">Cartesian product</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^d \times S^1</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/Euclidean+space">Euclidean space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>d</mi></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^d</annotation></semantics></math> with a <a class="existingWikiWord" href="/nlab/show/circle">circle</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>1</mn></msup></mrow><annotation encoding="application/x-tex">S^1</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/length">circumference</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta \coloneqq 1/T</annotation></semantics></math>:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><munder><munder><mrow><msub><mrow><mo>⟨</mo><mo>:</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mo>:</mo><mo>⟩</mo></mrow> <mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup><mo>,</mo><mi>T</mi></mrow></msub></mrow><mo>⏟</mo></munder><mfrac linethickness="0"><mrow><mrow><mtext>on Minkowski spacetime</mtext><mspace width="thinmathspace"></mspace><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mrow></mrow><mrow><mrow><mtext>at finite temperature</mtext><mspace width="thinmathspace"></mspace><mi>T</mi></mrow></mrow></mfrac></munder><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><munder><munder><mrow><msub><mrow><mo>⟨</mo><mo>:</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy="false">)</mo><mo>:</mo><mo>⟩</mo></mrow> <mrow><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mrow></msub></mrow><mo>⏟</mo></munder><mfrac linethickness="0"><mrow><mrow><mtext>on Euclidean space</mtext><mspace width="thinmathspace"></mspace><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msup><mi>S</mi> <mn>1</mn></msup></mrow></mrow><mrow><mrow><mtext>with circle of circumference</mtext><mspace width="thinmathspace"></mspace><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow></mrow></mfrac></munder></mrow><annotation encoding="application/x-tex">
   \underset{
     {\text{on Minkowski spacetime}\, \mathbb{R}^{d,1}}
@@ -806,6 +806,8 @@ margin-left: 0em;
   }}
 
 </annotation></semantics></math></div>
+<p>(see e.g. <a href="#Moore03">Moore 03, section 1.1</a> for the quick informal <a class="existingWikiWord" href="/nlab/show/path+integral">path integral</a>-idea and see <a href="#FullingRuijsenaars87">Fulling-Ruijsenaars 87, section 2</a> for a careful discussion in the case of 2-point functions).</p>
+
 <p>This perspective is known as <em><a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal quantum field theory</a></em> or similar, the use of a “periodic Euclidean time coordinate” is also known as <em><a class="existingWikiWord" href="/nlab/show/Matsubara+formalism">Matsubara formalism</a></em> (e.g. <a href="#LandsmanVanWert87">Landsman-vanWert 87, section 2.3.1</a>) and specifically the condition that the periodicity has to be <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>≔</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta \coloneqq 1/T</annotation></semantics></math> is known as the <em><a class="existingWikiWord" href="/nlab/show/KMS+conditions">KMS conditions</a></em> (For <em>Kubo-Martin-Schwinger</em>, due to <a href="#Kubo57">Kubo 57</a>, <a href="#MartinSchwinger59">Martin-Schwinger 59</a> with its final form due to<a href="#HaagHugenholtzWinnink67">Haag-Hugenholtz-Winnink 67</a>).</p>
 
 <p>(e.g. <a href="#Thoma00">Thoma 00, section 2.2</a>, <a href="#PeetersZamaklar09">Peeters-Zamaklar 09, section 1.3</a>)</p>
@@ -847,6 +849,8 @@ margin-left: 0em;
 </ul>
 
 <h3 id="thermal_quantum_field_theory">Thermal quantum field theory:</h3>
+
+<p>A good introduction is in <a href="#FullingRuijsenaars87">Fulling-Ruijsenaars 87, section 2</a>.</p>
 
 <p>The idea goes back to</p>
 
@@ -919,7 +923,13 @@ margin-left: 0em;
 <p>With an eye towards <a class="existingWikiWord" href="/nlab/show/black+hole+thermodynamics">black hole thermodynamics</a>:</p>
 
 <ul>
-<li id="FrolovZelnikov11"><a class="existingWikiWord" href="/nlab/show/Valeri+Frolov">Valeri Frolov</a>, Andrei Zelnikov, section F4.4 of <em>Introduction to black hole physics</em>, Oxford 2011</li>
+<li id="FullingRuijsenaars87">
+<p>S.A. Fulling, S.N.M. Ruijsenaars, <em>Temperature, periodicity and horizons</em>, Physics Reports Volume 152, Issue 3, August 1987, Pages 135-176 (<a href="https://www1.maths.leeds.ac.uk/~siru/papers/p26.pdf">pdf</a>, <a href="https://doi.org/10.1016/0370-1573(87)90136-0">doi:10.1016/0370-1573(87)90136-0</a>)</p>
+</li>
+
+<li id="FrolovZelnikov11">
+<p><a class="existingWikiWord" href="/nlab/show/Valeri+Frolov">Valeri Frolov</a>, Andrei Zelnikov, section F4.4 of <em>Introduction to black hole physics</em>, Oxford 2011</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -943,14 +953,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 12:59:43.
+  Last revised on November  8, 2018 at 13:49:01.
   See the <a href="https://ncatlab.org/nlab/history/Euclidean field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Euclidean+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euclidean+field+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Euclidean+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euclidean+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Euclidean+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euclidean+field+theory/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Euclidean+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euclidean+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Euclidean field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
