--- a/pages/4465.html
+++ b/pages/4465.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1138,6 +1138,12 @@ margin-left: 0em;
 <li id="FrolovZelnikov11"><a class="existingWikiWord" href="/nlab/show/Valeri+Frolov">Valeri Frolov</a>, Andrei Zelnikov, <em>Introduction to black hole physics</em>, Oxford 2011</li>
 </ul>
 
+<p>Review form the point of view of <span class="newWikiWord">thermal field theory<a href="/nlab/new/thermal+field+theory">?</a></span>:</p>
+
+<ul>
+<li id="FullingRuijsenaars87">S.A. Fulling, S.N.M. Ruijsenaars, <em>Temperature, periodicity and horizons</em>, Physics Reports Volume 152, Issue 3, August 1987, Pages 135-176 (<a href="https://www1.maths.leeds.ac.uk/~siru/papers/p26.pdf">pdf</a>, <a href="https://doi.org/10.1016/0370-1573(87)90136-0">doi:10.1016/0370-1573(87)90136-0</a>)</li>
+</ul>
+
 <p>Basic introductory accounts include</p>
 
 <ul>
@@ -1253,14 +1259,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 11:19:52.
+  Last revised on November  8, 2018 at 13:07:30.
   See the <a href="https://ncatlab.org/nlab/history/Bekenstein-Hawking entropy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bekenstein-Hawking+entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bekenstein-Hawking+entropy/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/Bekenstein-Hawking+entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bekenstein-Hawking+entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bekenstein-Hawking+entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bekenstein-Hawking+entropy/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/Bekenstein-Hawking+entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bekenstein-Hawking+entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Bekenstein-Hawking entropy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
