--- a/pages/2943.html
+++ b/pages/2943.html
@@ -985,7 +985,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>It is practically impossible to model a macroscopic system in terms of the microscopic kinematical and dynamical variables of all its particles. Thus one makes a hierarchical reduction in which this complexity is reduced to small number of collective variables. The theoretical framework for such reductions for systems is <a class="existingWikiWord" href="/nlab/show/statistical+mechanics">statistical mechanics</a> or statistical physics.</p>
+<p>It is practically impossible to model a macroscopic <a class="existingWikiWord" href="/nlab/show/physical+system">physical system</a> in terms of the microscopic kinematical and dynamical variables of all its <a class="existingWikiWord" href="/nlab/show/particles">particles</a>. Thus one makes a hierarchical reduction in which this complexity is reduced to small number of collective variables. The theoretical framework for such reductions for systems is <a class="existingWikiWord" href="/nlab/show/statistical+mechanics">statistical mechanics</a> or statistical physics.</p>
 
 <p>One special case of hierarchical reduction is the limit of large volumes <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math>, in which the number of particles (of each species) per volume, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo stretchy="false">/</mo><mi>V</mi></mrow><annotation encoding="application/x-tex">N/V</annotation></semantics></math>, stays constant. This is called the <strong><a class="existingWikiWord" href="/nlab/show/thermodynamic+limit">thermodynamic limit</a></strong> in statistical physics. Under some standard assumptions like homogeneity (spacial and possibly directional) and stability (no transitory effects), there is a small number of collective variables characterizing the system. Such a description can be (and historically was) postulated as an independent self-consistent phenomenological theory even without going into the details of statistical mechanics; such a description is called <strong><a class="existingWikiWord" href="/nlab/show/equilibrium">equilibrium</a> thermodynamics</strong>, which is believed to be deducible from statistical mechanics, as has been partially proved for some classes of systems. Sometimes transitional finite-time phenomena are described either statistically by studying stochastic processes or by a more elaborate hierarchical form of thermodynamics, so-called <strong>nonequilibrium thermodynamics</strong>.</p>
 
@@ -1130,14 +1130,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 10:02:41.
+  Last revised on November  9, 2018 at 03:18:39.
   See the <a href="https://ncatlab.org/nlab/history/thermodynamics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/thermodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/thermodynamics/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/thermodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/thermodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/thermodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/thermodynamics/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/thermodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/thermodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/thermodynamics/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
